--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -6,20 +6,20 @@
 #     𝗠𝗨𝗟𝗧𝗜𝗗𝗘𝗩𝗜𝗖𝗘 𝗪𝗛𝗔𝗧𝗦𝗔𝗣𝗣 𝗨𝗦𝗘𝗥 𝗕𝗢𝗧        #
 #=============================================#
 # 
-#    * @project_name : Suhail-Md
-#    * @author : @SuhailTechInfo
+#    * @project_name : Gilbert-Md
+#    * @author : @Gilbertkyalo
 #    * @youtube : https://www.youtube.com/c/@SuhailTechInfo
 #    * @description : Suhail-Md ,A Multi-functional whatsapp bot md.
 #    * @version 1.2.8
 # 
-# Don't change this [ /SuhailTechInfo/ ] name!
+# Don't change this [ /Gilbert kyalo/ ] name!
 # Change from below link, else bot not works!
 
  
 
-FROM quay.io/suhailtechinfo/suhail-v2
-RUN git clone https://github.com/SuhailTechInfo/Suhail-Md /root/Suhail
-WORKDIR /root/Suhail/
+FROM quay.io/Gilbertkyalo/gilbert-v2
+RUN git clone https://github.com/Gilbertkyalo/Gilbert-Md /root/Gilbert
+WORKDIR /root/Gilbert/
 RUN npm install
 EXPOSE 8000
 CMD ["npm","start" ] 
