--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "maldii-md@1.3.4",
-  "description": "I am Suhail-Md Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : www.youtube.com/SuhailTechInfo",
+  "description": "I am MALDY-Md Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : www.youtube.com/SuhailTechInfo",
   "logo": "https://telegra.ph/file/13ac9b94f58fae3023e5c.jpg",
   "keywords": ["whatsappbot", "MaldY Md", "Mak Md bot", "Suhail-Md", "SuhailMdWhatsaooBot", "SuhailWaBot","SuhailMD","Suhail Md Whatsapp Bot","multi device"],
   "success_url": "/suhail/",
