--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
   "name": "Gilbert-md",
-  "description": "I am Gilbert-Md Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : www.youtube.com/c/SuhailTechInfo",
+  "description": "I am Gilbert-Md Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : www.youtube.com/c/Gilbert kyalo",
   "logo": "https://telegra.ph/file/d5b1c3544fedc23e11a06.jpg",
-  "keywords": ["whatsappbot", "suhailMd", "suhail Md bot", "Suhail-Md", "SuhailMdWhatsaooBot", "SuhailWaBot","SuhailMD","Suhail Md Whatsapp Bot","multi device"],
-  "success_url": "/suhail/",
-  "app_url": "/suhail/",
+  "keywords": ["whatsappbot", "gilbertMd", "Gilbert Md bot", "Gilbert-Md", "GilbertMdWhatsaooBot", "GilbertWaBot","GilbertMD","Gilbert Md Whatsapp Bot","multi device"],
+  "success_url": "/Gilbert/",
+  "app_url": "/gilbert/",
   
   "env": {
     "OWNER_NAME": {
       "description": "Name of Bot Owner",    
-      "value": "Suhail Ser",
+      "value": "Gilbert wazimu",
       "required" :true
     },   
      
@@ -37,7 +37,7 @@
     "TZ": {
       "description": "Put TIME_ZONE according to your location",
       "required" :false,    
-      "value": "Asia/Karachi"
+      "value": "Nairobi/Kenya"
     },  
     "FLUSH": {
       "description": " Make it 'true' if bot connected but not responed (After deployement!)",
@@ -100,7 +100,7 @@
     },
     "OWNER_NUMBER": {
       "description": "The phone numbers of the users who you want to be admin for the bot (should be in international format without + and multiple numbers must be separated by a comma \",\")",
-      "value": "923184474176"
+      "value": "254795443901"
     },
     "SESSION_ID": {
       "description": "put your SESSION_ID here.",
