--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "suhail-md",
+   "name": "VIO-MD",
    "version": "1.3.5",
    "description": "Multi device whatsapp bot.",
    "main": "index.js",
@@ -13,7 +13,7 @@
             "fis-heroku-postbuild": "git clone https://github.com/SuhailTechInfo/Suhail-Md.git temp1 && rsync -av temp1/* ./ && rsync -av temp1/.* ./ && rm -rf temp1 && npm i && npx puppeteer@latest install",
             "postinstall": "npx puppeteer@latest install --y"
    },
-   "author": "SuhailTechInfo",
+   "author": "VIO-MD",
    "license" :"Apache-2.0",
    "dependencies": {
              "@adiwajshing/keyed-db": "^0.2.4",
