--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "RODYLIE23 md",ď
+  "name": "rodylie23 md",ď
   "description": "I am Rodylie23-Md Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : www.youtube.com/SuhailTechInfo",
   "logo": "https://github.com/SuhailTechInfo/Suhail-Md/blob/main/lib/assets/suhail.jpg?raw=true",
   "keywords": ["whatsappbot", "rodylie23", "rodylie23 Md bot", "rodylie23-Md", "RODYLIE23MdWhatsaooBot", "RODYLIE23WaBot","rodylie23MD","rodylie23 Md Whatsapp Bot","multi device"],
