--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "OFFICIAL_KY@1.3.7",
+  "name": "suhail-md@1.3.7",
   "description": "I am OFFICIAL_KY Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : www.youtube.com/SuhailTechInfo",
   "logo": "https://telegra.ph/file/e548c60375272c01182ff.jpg",
   "keywords": ["whatsappbot", "suhailMd", "suhail Md bot", "Suhail-Md", "SuhailMdWhatsaooBot", "SuhailWaBot","SuhailMD","Suhail Md Whatsapp Bot","multi device"],
