--- a/app.json
+++ b/app.json
@@ -63,7 +63,7 @@
       "description": "Enter your desired prefix for bot. you can set `all | . | .!*`",
       "value": "."
     },
-    "OWNER_NUMBER": {”2\,5\,\4)743416283”
+    "OWNER_NUMBER": { ”254743416283”
       "description": "The phone numbers of the users who you want to be admin for the bot (should be in international format without + and multiple numbers must be separated by a comma \",\")",
       "value": "923184474176"
     },
