--- a/.github/workflows/Crate deploy.yml
+++ b/.github/workflows/Crate deploy.yml
@@ -1,33 +1,33 @@
-name: Node.js Cl
+name: Node.js CI
 
- on:
+on:
   push:
     branches:
-      main
- pull-request:
-  branches:
-    -main
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
 
-   runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-   strategy:
-    matrix:
-      node-version: (20.x]
+    strategy:
+      matrix:
+        node-version: [20.x]
 
-   steps:
-    -name: Checkout repository      
-     uses: actions/checkout@v3
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
- name: Set up Node.js
- uses: actions/setup-node@v3  
- with:
-  node-version: ${{ matrix.node-version }}
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
 
- name: Install dependencies 
- run: now install
- 
- name: Start application 
- run: npm start
+    - name: Install dependencies
+      run: npm install
+
+    - name: Start application
+      run: npm start
