--- a/.github/workflows/Crate deploy.yml
+++ b/.github/workflows/Crate deploy.yml
@@ -1,33 +1,28 @@
-name: Node.js CI
+# This is a basic workflow to help you get started with Actions
 
+name: CI
+
+# Controls when the workflow will run
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  # Triggers the workflow on push or pull request events but only for the "development" branch
+  release:
+    types: [created]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
-
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [20.x]
-
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Start application
-      run: npm start
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world Nikzad!, 3
