--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
-  "name": "suhail-md@1.3.9",
-  "description": "I am Suhail-Md Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : www.youtube.com/SuhailTechInfo",
-  "logo": "https://github.com/SuhailTechInfo/Suhail-Md/blob/main/lib/assets/suhail.jpg?raw=true",
-  "keywords": ["whatsappbot", "suhailMd", "suhail Md bot", "Suhail-Md", "SuhailMdWhatsaooBot", "SuhailWaBot","SuhailMD","Suhail Md Whatsapp Bot","multi device"],
+  "name": "Tech-KiNG@1.3.9",
+  "description": "I am Tech-KiNG Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t if Any Problem : https://www.youtube.com/@TechKiNG0-m6b",
+  "logo": "https://www.instagram.com/techking764?igsh=MXNqeDUwdndpbWJ0OQ==true",
+  "keywords": ["whatsappbot", "TechKiNG", "Tech KiNG bot", "Tech-KiNG", "TechKiNGWhatsaooBot", "Tech-KiNGWaBot","TechKiNG","Tech KiNG Whatsapp Bot","multi device"],
   "success_url": "/suhail/",
   "app_url": "/qr/",
   "stack":"container",
   "env": {
     "OWNER_NAME": {
       "description": "Name for Bot Owner",    
-      "value": "Suhail Ser",
+      "value": "Tech-KiNG Ser",
       "required" :true
     },   
      
@@ -27,7 +27,7 @@
     "BOT_NAME": {
       "description": " NAME FOR BOT",
       "required" :false,    
-      "value": "sᴜʜᴀɪʟ-ᴍᴅ"
+      "value": "Tech-KiNG"
     }, 
     "TZ": {
       "description": "Put TIME_ZONE according to your location",
@@ -65,7 +65,7 @@
     },
     "OWNER_NUMBER": {
       "description": "The phone numbers of the users who you want to be admin for the bot (should be in international format without + and multiple numbers must be separated by a comma \",\")",
-      "value": "923184474176"
+      "value": "923460058202"
     },
     "SESSION_ID": {
       "description": "put your SESSION_ID here.",
@@ -93,13 +93,13 @@
     },
     "PACK_NAME": {
       "description": "Put Sticker Pack_Name.",
-      "value": "Suhail Md",
-      "required": false 
+      "value": "Tech KiNG",
+      "required": true 
     },
     "PACK_AUTHER": {
-      "description": "Put Sticker Author_Name.",
+      "description": "Tech-KiNG.",
       "value": "",
-      "required": false 
+      "required": true 
     }
   }, 
   "addons": [{ "plan": "heroku-postgresql:essential-1" }],
