--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "suhail-md",
+   "name": "TECH-KiNG",
    "version": "1.3.9",
    "description": "Multi device whatsapp bot.",
    "main": "index.js",
