--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
   "stack":"container",
   "env": {
     "OWNER_NAME": {
-      "description": "Name for Bot Owner",    
+      "description": "chukwuebuka Alphonus",    
       "value": "Suhail Ser",
       "required" :true
     },   
@@ -65,7 +65,7 @@
     },
     "OWNER_NUMBER": {
       "description": "The phone numbers of the users who you want to be admin for the bot (should be in international format without + and multiple numbers must be separated by a comma \",\")",
-      "value": "923184474176"
+      "value": "07060521857"
     },
     "SESSION_ID": {
       "description": "put your SESSION_ID here.",
